@@ -1,5 +1,7 @@
 2011-07-09  Jason Merrill  <jason@redhat.com>
 
+	* tree.c (build_vec_init_elt): Strip TARGET_EXPR.
+
 	* tree.c (build_vec_init_expr): Don't add TARGET_EXPR.
 	* typeck2.c (digest_init_r): Handle VEC_INIT_EXPR.
 	* semantics.c (cxx_eval_vec_init_1): Correct type.
